--- a/Chat/public/html/profile.html
+++ b/Chat/public/html/profile.html
@@ -1,2 +1,11 @@
-<div class="Profile">
+<script src="../js/profile.js"></script>
+<div class="profile">
+    <h1> My profile </h1>
+    <div class="row">
+      <div class=form-horizontal>
+        <div class="form-group">
+          <input type="file" value="upload">
+        </div>
+      </div>
+    </div>
 </div>
